Development history / change log, please read from bottom up

Version 3.3.2 - xx yyy 2017
* xyz ...
History analysis
* Enhance initial vertical lines positions in delta measurement mode
* Fix histo table column values for non-reversed timestamp sequence
* Fix table entries for GPS location which are not shown sometimes
* Enhance performance
	-- redraw graphics
	-- scan log file folders
	-- read osd / bin
	-- switch channel
* Prepare histo kernel for forthcoming *.log files
* Fix creating empty directories in case of unknown objects or devices
* Enhance history module code base segregration from the application kernel 

Version 3.3.1 - 17 Oct 2017
* fix retrieving working state from XML (iCharger and others) 
* fix NullPointerException while KMZ export having a not completely initialized object
* fix object initialization using wrong object key
* fix serial connected iCharger live gatherer tolerating timeouts
* fix object update problem while removing objects
* fix HoTTAdapter* GAM capacity filter null value
* fix GraphicsTemplate save problems
* reduce graphical display changes to force unsaved hint
* remove LogView files to be written as CSV export during junit test
* enhance Windows port enumeration for BT serial ports (enumeration falls back while BT switched on)
HoTTAdapter*
	* add missing measurements (GAM,EAM) and events(preliminary use inverse bits) to HoTTAdapter
	* add missing measurements (GAM,EAM) and events(preliminary use inverse bits) to HoTTAdapter2
	* add inverse bit alarms and warning
	* add initial support for new log data format (*.log)
Pulsar3
	* add initial support, import and LogView
Devo-Telemetry
	* add initial support CSV import converted log data files

Version 3.3.0 - 01 Jul 2017
OVERVIEW:
+ add UT16E multimeter support
+ add D100 charger support
+ enhance HoTTAdapter support
+ enhance NMEA-Adapter support
+ enhance MC3000 & Q200 support
+ enhance VC820 & VC840 support