@@ -59,7 +59,7 @@
 		<tstamp>
 		     <format property="TODAY" pattern="yyyy-MM-dd HH:mm:ss" />
 		</tstamp>
-		<property name="export.services" value="gde.device.junsi.iCharger206B, gde.device.junsi.iCharger208B, gde.device.junsi.iCharger306B, gde.device.junsi.iCharger3010B, gde.device.junsi.CellLog 8S, gde.device.junsi.iCharger308DUO, gde.device.junsi.iCharger4010DUO"/>
+		<property name="export.services" value="gde.device.junsi.iCharger106B, gde.device.junsi.iCharger206B, gde.device.junsi.iCharger208B, gde.device.junsi.iCharger306B, gde.device.junsi.iCharger3010B, gde.device.junsi.CellLog 8S, gde.device.junsi.iCharger308DUO, gde.device.junsi.iCharger4010DUO"/>
 		<manifest file="src/META-INF/MANIFEST.MF">
     		<attribute name="Implementation-Version" value="${version.num}"/>
 			<attribute name="Created-By" value="${user.name}"/>
