@@ -1,0 +1,1 @@
+<?xml version="1.0" encoding="UTF-8" standalone="yes"?><DeviceProperties xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="DeviceProperties_V32.xsd">	<Device>		<name>iCharger106B</name>		<manufacturer>Junsi</manufacturer>		<manufacturerURL>http://www.jun-si.com</manufacturerURL>		<group>charger</group>		<image>iCharger106B.png</image>		<usage>false</usage>	</Device>	<SerialPort>		<port>-</port>		<baudeRate>9600</baudeRate>		<dataBits>DATABITS_8</dataBits>		<stopBits>STOPBITS_1</stopBits>		<parity>PARITY_NONE</parity>		<flowControlMode>FLOWCONTROL_NONE</flowControlMode>		<isRTS>false</isRTS>		<isDTR>false</isDTR>        <TimeOut>            <ReadTimeOut>2500</ReadTimeOut>            <ReadStableIndex>8</ReadStableIndex>            <WriteCharDelayTime>0</WriteCharDelayTime>            <WriteDelayTime>0</WriteDelayTime>        </TimeOut>	</SerialPort>	<TimeBase>		<name>time</name>		<symbol>t</symbol>		<unit>msec</unit>        <timeStep>2000.0</timeStep>	</TimeBase>    <DataBlock>        <format inputType="SERIAL_IO" formatType="BYTE" size="-150"/>        <format inputType="FILE_IO" formatType="VALUE" size="13"/>        <timeUnit>sec</timeUnit>        <separator>semicolon</separator>    </DataBlock>    <State>        <property description="Ladeoperation" type="Integer" value="1" name="state_charge"/>        <property description="Entladeoperation" type="Integer" value="2" name="state_discharge"/>        <property description="Beobachten" type="Integer" value="3" name="state_monitoring"/>        <property description="Warten auf anderen Status" type="Integer" value="4" name="state_dry_time"/>        <property description="Motortestlauf" type="Integer" value="5" name="state_motor_test"/>        <property description="alle Programme abgelaufen" type="Integer" value="6" name="state_finish"/>        <property description="Fehler" type="Integer" value="7" name="state_error"/>        <property description="LiXx Erhaltungsladung" type="Integer" value="8" name="state_lixx_maintain"/>        <property description="NiXx Erhaltungsladung" type="Integer" value="9" name="state_nixx_maintain"/>        <property description="Schaumschneideprogramm" type="Integer" value="10" name="state_foam_cut"/>        <property description="Informationsanzeige" type="Integer" value="11" name="state_info"/>        <property description="Entladeoperationende" type="Integer" value="12" name="state_ex_discharge"/>    </State>    <Channels>		<Channel type="TYPE_OUTLET" name="type_outlet">			<Measurement>				<name>supply_voltage</name>				<symbol>Uin</symbol>				<unit>V</unit>				<active>true</active>                <statistics sigma="true" avg="true" max="true" min="true"/>            </Measurement>            <Measurement>                <name>voltage</name>                <symbol>U</symbol>                <unit>V</unit>                <active>true</active>                <statistics sigma="false" avg="false" max="true" min="true"/>            </Measurement>            <Measurement>                <name>current</name>                <symbol>I</symbol>                <unit>A</unit>                <active>true</active>                <statistics sigma="true" avg="true" max="true" min="true"/>                <property description="factor to measurement value" type="Double" value="10.0" name="factor"/>            </Measurement>            <Measurement>                <name>capacity</name>                <symbol>C</symbol>                <unit>mAh</unit>                <active>true</active>                <statistics sigma="false" avg="false" max="true" min="true"/>            </Measurement>            <Measurement>                <name>power</name>                <symbol>P</symbol>                <unit>W</unit>                <statistics sigma="false" avg="false" max="true" min="true"/>            </Measurement>            <Measurement>                <name>energy</name>                <symbol>E</symbol>                <unit>Wh</unit>                <statistics sigma="false" avg="false" max="true" min="true"/>            </Measurement>            <Measurement>                <name>temperature intern</name>                <symbol>T</symbol>                <unit>°C</unit>                <active>true</active>                <statistics sigma="true" avg="true" max="true" min="true"/>                <property description="factor to measurement value" type="Double" value="100.0" name="factor"/>            </Measurement>            <Measurement>                <name>temperature extern</name>                <symbol>T</symbol>                <unit>°C</unit>                <active>true</active>                <statistics sigma="true" avg="true" max="true" min="true"/>                <property type="Integer" value="6" name="scale_sync_ref_ordinal"/>                <property description="factor to measurement value" type="Double" value="100.0" name="factor"/>            </Measurement>            <Measurement>                <name>balance</name>                <symbol>Bal</symbol>                <unit>mV</unit>                <statistics sigma="true" avg="true" max="true" min="true"/>                <property description="factor to measurement value" type="Double" value="1000.0" name="factor"/>            </Measurement>            <Measurement>                <name>cell_voltage 1</name>                <symbol>U</symbol>                <unit>V</unit>                <active>true</active>                <statistics sigma="false" avg="false" max="true" min="true"/>            </Measurement>            <Measurement>                <name>cell_voltage 2</name>                <symbol>U</symbol>                <unit>V</unit>                <active>true</active>                <statistics sigma="false" avg="false" max="true" min="true"/>                <property type="Integer" value="9" name="scale_sync_ref_ordinal"/>            </Measurement>            <Measurement>                <name>cell_voltage 3</name>                <symbol>U</symbol>                <unit>V</unit>                <active>true</active>                <statistics sigma="false" avg="false" max="true" min="true"/>                <property type="Integer" value="9" name="scale_sync_ref_ordinal"/>            </Measurement>            <Measurement>                <name>cell_voltage 4</name>                <symbol>U</symbol>                <unit>V</unit>                <active>true</active>                <statistics sigma="false" avg="false" max="true" min="true"/>                <property type="Integer" value="9" name="scale_sync_ref_ordinal"/>            </Measurement>            <Measurement>                <name>cell_voltage 5</name>                <symbol>U</symbol>                <unit>V</unit>                <active>true</active>                <statistics sigma="false" avg="false" max="true" min="true"/>                <property type="Integer" value="9" name="scale_sync_ref_ordinal"/>            </Measurement>            <Measurement>                <name>cell_voltage 6</name>                <symbol>U</symbol>                <unit>V</unit>                <active>true</active>                <statistics sigma="false" avg="false" max="true" min="true"/>                <property type="Integer" value="9" name="scale_sync_ref_ordinal"/>            </Measurement>        </Channel>    </Channels>    <Desktop>        <property value="true" name="table_tab"/>        <property value="true" name="digital_tab"/>        <property value="true" name="analog_tab"/>        <property target_reference_ordinal="9" value="true" name="voltage_per_cell_tab"/>        <property description="UTILITY_GRAPHICS_TAB" value="false" name="utility_garphics_tab"/>        <property description="UTILITY_DEVICE_TAB" value="false" name="utility_device_tab"/>	</Desktop></DeviceProperties>
