@@ -1,0 +1,201 @@
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<!DOCTYPE properties SYSTEM "http://java.sun.com/dtd/properties.dtd">
+<properties>
+<comment>-- DataExplorer GraphicsTemplate --</comment>
+<entry key="14_isStartEndDefined">false</entry>
+<entry key="12_numberFormat">-1</entry>
+<entry key="7_isVisible">false</entry>
+<entry key="10_lineStyle">1</entry>
+<entry key="2_isRoundOut">false</entry>
+<entry key="7_isRoundOut">false</entry>
+<entry key="6_lineStyle">1</entry>
+<entry key="8_numberFormat">-1</entry>
+<entry key="5_isStartEndDefined">false</entry>
+<entry key="7_isStartpointZero">false</entry>
+<entry key="10_color">0,128,255</entry>
+<entry key="10_isPositionLeft">false</entry>
+<entry key="2_isPositionLeft">true</entry>
+<entry key="7_color">102,102,102</entry>
+<entry key="1_numberFormat">-1</entry>
+<entry key="9_isPositionLeft">false</entry>
+<entry key="12_isVisible">true</entry>
+<entry key="8_color">255,127,0</entry>
+<entry key="6_defMaxValue">120.10000000000001</entry>
+<entry key="15_defMinValue">0.354</entry>
+<entry key="0_lineWidth">1</entry>
+<entry key="2_defMinValue">0.03</entry>
+<entry key="10_numberFormat">-1</entry>
+<entry key="8_isVisible">true</entry>
+<entry key="9_color">127,0,127</entry>
+<entry key="11_lineStyle">1</entry>
+<entry key="7_lineStyle">1</entry>
+<entry key="16_defMaxValue">4.206</entry>
+<entry key="10_isStartpointZero">false</entry>
+<entry key="3_defMaxValue">0.1</entry>
+<entry key="5_color">0,128,128</entry>
+<entry key="10_isRoundOut">false</entry>
+<entry key="6_color">128,128,0</entry>
+<entry key="15_isRoundOut">false</entry>
+<entry key="13_isVisible">true</entry>
+<entry key="15_isPositionLeft">false</entry>
+<entry key="7_isPositionLeft">true</entry>
+<entry key="1_lineWidth">1</entry>
+<entry key="9_isVisible">true</entry>
+<entry key="12_lineStyle">1</entry>
+<entry key="3_color">128,64,0</entry>
+<entry key="8_isStartpointZero">false</entry>
+<entry key="4_color">255,0,255</entry>
+<entry key="0_isRoundOut">false</entry>
+<entry key="6_numberFormat">-1</entry>
+<entry key="8_lineStyle">1</entry>
+<entry key="12_defMinValue">0.0</entry>
+<entry key="12_isStartEndDefined">false</entry>
+<entry key="5_isRoundOut">false</entry>
+<entry key="9_defMinValue">0.0</entry>
+<entry key="15_numberFormat">-1</entry>
+<entry key="RecordSet_smoothAtCurrentDrop">false</entry>
+<entry key="0_color">102,204,255</entry>
+<entry key="0_isPositionLeft">true</entry>
+<entry key="13_defMaxValue">4.107</entry>
+<entry key="0_defMaxValue">11.966</entry>
+<entry key="1_color">0,0,255</entry>
+<entry key="14_isVisible">true</entry>
+<entry key="3_isStartEndDefined">false</entry>
+<entry key="2_color">255,0,0</entry>
+<entry key="13_isPositionLeft">false</entry>
+<entry key="9_isStartpointZero">false</entry>
+<entry key="2_lineWidth">1</entry>
+<entry key="11_isStartpointZero">false</entry>
+<entry key="10_defMaxValue">4.107</entry>
+<entry key="13_lineStyle">1</entry>
+<entry key="RecordSet_horizontalGridType">1</entry>
+<entry key="0_isStartpointZero">false</entry>
+<entry key="9_lineStyle">1</entry>
+<entry key="4_numberFormat">-1</entry>
+<entry key="RecordSet_timeGridLineStyle">3</entry>
+<entry key="13_isRoundOut">false</entry>
+<entry key="10_isStartEndDefined">false</entry>
+<entry key="6_defMinValue">0.0</entry>
+<entry key="12_isStartpointZero">false</entry>
+<entry key="15_isVisible">true</entry>
+<entry key="16_isVisible">true</entry>
+<entry key="5_isPositionLeft">false</entry>
+<entry key="3_lineWidth">1</entry>
+<entry key="1_isStartpointZero">false</entry>
+<entry key="14_lineStyle">1</entry>
+<entry key="15_lineStyle">1</entry>
+<entry key="7_defMaxValue">120.10000000000001</entry>
+<entry key="16_defMinValue">0.354</entry>
+<entry key="3_defMinValue">-0.1</entry>
+<entry key="1_isStartEndDefined">false</entry>
+<entry key="8_isStartEndDefined">false</entry>
+<entry key="RecordSet_smoothVoltageCurve">false</entry>
+<entry key="13_numberFormat">-1</entry>
+<entry key="4_defMaxValue">5.165</entry>
+<entry key="3_isRoundOut">false</entry>
+<entry key="8_isRoundOut">false</entry>
+<entry key="RecordSet_horizontalGridRecordOrdinal">9</entry>
+<entry key="0_isVisible">false</entry>
+<entry key="4_lineWidth">1</entry>
+<entry key="11_isPositionLeft">false</entry>
+<entry key="RecordSet_horizontalGridLineStyle">2</entry>
+<entry key="5_lineWidth">1</entry>
+<entry key="3_isPositionLeft">false</entry>
+<entry key="16_lineStyle">1</entry>
+<entry key="15_isStartEndDefined">false</entry>
+<entry key="2_numberFormat">-1</entry>
+<entry key="13_defMinValue">0.0</entry>
+<entry key="13_isStartpointZero">false</entry>
+<entry key="11_numberFormat">-1</entry>
+<entry key="0_defMinValue">11.873</entry>
+<entry key="2_isStartpointZero">false</entry>
+<entry key="6_isStartEndDefined">false</entry>
+<entry key="9_numberFormat">-1</entry>
+<entry key="10_lineWidth">1</entry>
+<entry key="14_defMaxValue">4.107</entry>
+<entry key="1_defMaxValue">12.376</entry>
+<entry key="1_isVisible">true</entry>
+<entry key="10_defMinValue">0.0</entry>
+<entry key="11_isRoundOut">false</entry>
+<entry key="6_lineWidth">1</entry>
+<entry key="16_isRoundOut">false</entry>
+<entry key="0_lineStyle">1</entry>
+<entry key="14_isStartpointZero">false</entry>
+<entry key="16_isPositionLeft">false</entry>
+<entry key="0_numberFormat">-1</entry>
+<entry key="8_isPositionLeft">true</entry>
+<entry key="3_isStartpointZero">false</entry>
+<entry key="13_isStartEndDefined">false</entry>
+<entry key="1_isRoundOut">false</entry>
+<entry key="7_numberFormat">-1</entry>
+<entry key="6_isRoundOut">false</entry>
+<entry key="11_lineWidth">1</entry>
+<entry key="2_isVisible">true</entry>
+<entry key="16_numberFormat">-1</entry>
+<entry key="7_defMinValue">0.0</entry>
+<entry key="7_lineWidth">1</entry>
+<entry key="1_isPositionLeft">false</entry>
+<entry key="4_isStartEndDefined">false</entry>
+<entry key="1_lineStyle">1</entry>
+<entry key="11_defMaxValue">4.107</entry>
+<entry key="8_defMaxValue">117.0</entry>
+<entry key="4_defMinValue">0.0</entry>
+<entry key="RecordSet_horizontalGridColor">192,192,192</entry>
+<entry key="12_lineWidth">1</entry>
+<entry key="3_isVisible">true</entry>
+<entry key="15_isStartpointZero">false</entry>
+<entry key="8_lineWidth">1</entry>
+<entry key="11_isStartEndDefined">false</entry>
+<entry key="2_lineStyle">1</entry>
+<entry key="4_isStartpointZero">false</entry>
+<entry key="14_isRoundOut">false</entry>
+<entry key="14_isPositionLeft">false</entry>
+<entry key="6_isPositionLeft">true</entry>
+<entry key="9_isStartEndDefined">false</entry>
+<entry key="2_isStartEndDefined">false</entry>
+<entry key="5_defMaxValue">0.0</entry>
+<entry key="14_defMinValue">0.0</entry>
+<entry key="1_defMinValue">10.254</entry>
+<entry key="5_numberFormat">-1</entry>
+<entry key="16_isStartpointZero">false</entry>
+<entry key="13_lineWidth">1</entry>
+<entry key="4_isVisible">false</entry>
+<entry key="4_isRoundOut">false</entry>
+<entry key="5_isStartpointZero">false</entry>
+<entry key="14_numberFormat">-1</entry>
+<entry key="9_lineWidth">1</entry>
+<entry key="15_defMaxValue">4.206</entry>
+<entry key="9_isRoundOut">false</entry>
+<entry key="2_defMaxValue">0.42999999999999994</entry>
+<entry key="11_defMinValue">0.0</entry>
+<entry key="3_lineStyle">1</entry>
+<entry key="12_isPositionLeft">false</entry>
+<entry key="16_color">189,193,100</entry>
+<entry key="16_isStartEndDefined">false</entry>
+<entry key="10_isVisible">true</entry>
+<entry key="3_numberFormat">-1</entry>
+<entry key="14_lineWidth">1</entry>
+<entry key="15_lineWidth">1</entry>
+<entry key="5_isVisible">false</entry>
+<entry key="13_color">204,204,51</entry>
+<entry key="6_isVisible">false</entry>
+<entry key="7_isStartEndDefined">false</entry>
+<entry key="0_isStartEndDefined">false</entry>
+<entry key="RecordSet_timeGridType">1</entry>
+<entry key="14_color">0,204,102</entry>
+<entry key="4_lineStyle">1</entry>
+<entry key="8_defMinValue">0.0</entry>
+<entry key="5_lineStyle">1</entry>
+<entry key="15_color">51,51,153</entry>
+<entry key="12_isRoundOut">false</entry>
+<entry key="12_defMaxValue">4.107</entry>
+<entry key="4_isPositionLeft">true</entry>
+<entry key="RecordSet_timeGridColor">192,192,192</entry>
+<entry key="9_defMaxValue">4.107</entry>
+<entry key="5_defMinValue">0.0</entry>
+<entry key="11_color">64,128,0</entry>
+<entry key="6_isStartpointZero">false</entry>
+<entry key="11_isVisible">true</entry>
+<entry key="12_color">204,51,51</entry>
+<entry key="16_lineWidth">1</entry>
+</properties>
