@@ -1,7 +1,8 @@
 Development history / change log, please read from bottom up
 
 Version 3.3.2 - xx yyy 2017
-* xyz ...
+* fix HoTTAdapter wrong data block number detection
+* add initial support for Junsi iCharger 106B
 History analysis
 * Enhance initial vertical lines positions in delta measurement mode
 * Fix histo table column values for non-reversed timestamp sequence
